--- a/jd/cards_yaml/0001-torts-protected-interests-overview.yml
+++ b/jd/cards_yaml/0001-torts-protected-interests-overview.yml
@@ -1,142 +1,136 @@
-front: "Protected interests in tort: identify and apply injury, property, and pure\n\
-  \  economic loss?\n"
-back: 'Issue.
+front: "Protected interests in tort: identify and apply injury, property, and pure economic loss?"
+back: |
+  Issue — How does classifying the claimant’s protected interest (injury, property, or pure economic loss) shape the Victorian negligence roadmap before breach, causation, and remedies?
 
-  Classify the claimant’s protected interest so correct Victorian framework and statutes
-  anchor the answer before breach or remedy.
+  Rule —
+  - Injury: negligence or intentional-tort scaffolds with material-risk warnings (Rogers v Whitaker (1992) 175 CLR 479, 490–493) and the Chapman v Hearse (1961) 106 CLR 112, 121 foreseeability threshold.
+  - Property: exclusive possession plus directness govern trespass; nuisance liability turns on unreasonableness (Entick v Carrington (1765) 19 St Tr 1029; Overseas Tankship (UK) Ltd v Morts Dock (The Wagon Mound) (No 1) [1961] AC 388 (PC) 426).
+  - Pure economic loss: no general duty—confine liability with salient features (Perre v Apand Pty Ltd [1999] HCA 36, [118]–[122]; Brookfield Multiplex Ltd v Owners SP 61288 [2014] HCA 36).
 
-  Rule.
+  Application scaffold —
+  - Classify the interest and separate consequential loss from pure economic loss.
+  - For injury, apply Wrongs Act s 48 (standard of care), s 51 (causation/scope), and any Pt XI mental-harm gates before remedies.
+  - For property, confirm possession, characterise the interference (direct trespass versus nuisance reasonableness), and select proportionate remedies.
+  - For pure economic loss, run the salient-features matrix—vulnerability, assumption of responsibility, reliance, indeterminacy, and coherence (Caltex Refineries (Qld) Pty Ltd v Stavar [2009] NSWCA 258, [103]; Caltex Oil (Australia) Pty Ltd v The Dredge "Willemstad" (1976) 136 CLR 529).
+  - Close with remoteness (Wagon Mound 426), statutory overlays (Pt VBA thresholds/caps, Pt XI mental harm), and any defences.
 
-  Personal injury uses negligence/intentional scaffolds with material-risk warnings
-  (Rogers v Whitaker) and a foreseeability floor (Chapman v Hearse).
+  Authorities map —
+  - Rogers v Whitaker (1992) 175 CLR 479, 490–493 — injury warnings and standard of care.
+  - Chapman v Hearse (1961) 106 CLR 112, 121 — foreseeability floor for injury/property.
+  - Entick v Carrington (1765) 19 St Tr 1029 — possession-centred trespass liability.
+  - Overseas Tankship (UK) Ltd v Morts Dock (The Wagon Mound) (No 1) [1961] AC 388 (PC) 426 — remoteness of kind (persuasive).
+  - Perre v Apand Pty Ltd (1999) 198 CLR 180; Brookfield Multiplex Ltd v Owners SP 61288 [2014] HCA 36 — salient features constrain economic loss duties.
+  - Sullivan v Moody (2001) 207 CLR 562; Modbury Triangle Shopping Centre Pty Ltd v Anzil (2000) 205 CLR 254 — coherence when extending duties to omissions/public actors.
 
-  Property turns on exclusive possession and direct interference (Entick) with remoteness
-  kept to reasonable foreseeability (Wagon Mound (No 1) .
+  Statutory hook —
+  - Wrongs Act 1958 (Vic) ss 26, 48, 51(1)(b), 51(4), s 74, Pt XI, Pt VBA (including s 28G threshold).
 
-  persuasive).
+  Tripwires —
+  - Misclassifying consequential loss as pure economic loss.
+  - Ignoring Pt VBA thresholds or caps for damages.
+  - Skipping Pt XI and s 74 when reframing mental harm.
+  - Assuming trespass protects ownership rather than possession.
 
-  Application scaffold.
+  Conclusion — Start with the interest classification, apply the tailored doctrine plus statutory overlays, then deliver liability and remedy so the exam roadmap stays coherent.
 
-  1) Name the factual interest and flag any overlap or consequential loss.
+why_it_matters: |
+  Interest-first triage keeps Victorian negligence answers coherent, letting you separate possession, directness, remoteness, and salient features while signalling Wrongs Act s 48/s 51 literacy under pressure.
 
-  2) Apply the tailored test: injury .
-
-  duty/breach plus mental-harm gates.
-
-  property .
-
-  possession, directness, nuisance reasonableness, remedies.
-
-  economic .
-
-  salient features and coherence.
-
-  Authorities map.
-
-  Injury: Rogers.
-
-  Chapman.
-
-  Property: Entick.
-
-  Wagon Mound (No 1).
-
-  Economic: Perre.
-
-  Woolcock.
-
-  Brookfield.
-
-  Caltex Oil.
-
-  Coherence: Sullivan v Moody.
-
-  Modbury.
-
-  Statutory hook.
-
-  Wrongs Act 1958 (Vic) ss 26, 48, 51, 54.
-
-  Pt Victorian statutory damages part (Pt Victorian Bar Association (VBA)) (incl s
-  28G threshold).
-
-  Tripwires.
-
-  Avoid collapsing consequential into pure economic loss, skipping Pt VBA thresholds,
-  turning salient features into rigid elements, or ignoring mental-harm filters when
-  reframing injury.
-
-  Conclusion.
-
-  Lead with the interest classification, then integrate doctrine, statutes, and coherence
-  so the remedy flows logically.
-
-  __HD__0__
-
-  State the governing test and any operative statutory provisions.
-
-  __HD__1__
-
-  Apply issues -> rules -> apply to facts -> conclude.
-
-  __HD__2__
-
-  Lead: Rogers v Whitaker (1992) 175 Commonwealth Law Reports (CLR) 479, 490–493.
-
-  Lead: Rogers v Whitaker (1992) 175 CLR 479, 490–493.
-
-  __HD__3__
-
-  Primary: Wrongs Act 1958 (Vic) s 48.
-
-  __HD__4__
-
-  - Don’t exceed statutory thresholds/caps
-
-  - Don’t conflate consequential with pure economic loss
-
-  - Apply coherence checks before extending duties.
-
-  __HD__5__
-
-  Tie the analysis back to the pleadings and the available remedies/defences.
-
-  '
-why_it_matters: "Under exam pressure, triage by interest controls the entire answer.\n\
-  \  Injury uses negligence/intentional‑tort scaffolds and Pt VBA caps; property turns\n\
-  \  on possession, directness, and remoteness; economic loss demands salient features\n\
-  \  and coherence. Sequencing avoids conflation and earns method marks. Pinpointing\n\
-  \  Wrongs Act s 48/s 51 and leading authorities signals accuracy and statutory literacy.\n\
-  \n  \n"
 mnemonic: 3Ps → People, Property, Pure economic
-diagram: "```mermaid\nmindmap\n  root((Card overview))\n    Issue\n    Rule\n    Application\n\
-  \    Conclusion\n  - Issue\n  - Rule\n  - Application\n  - Conclusion\n```\n"
+
+diagram: |-
+  ```mermaid
+  mindmap
+    root((Protected interests → roadmap))
+      Issue
+        Classify: injury / property / pure econ
+      Injury
+        s 48/49 breach scaffold
+        Material-risk warnings (Rogers)
+        Foreseeability floor (Chapman)
+      Property
+        Trespass = possession + directness
+        Nuisance = unreasonableness
+        Remoteness of kind (Wagon Mound)
+      Pure economic loss
+        Salient features: vulnerability • assumption/reliance • indeterminacy
+        Coherence with contracts/statutes (Perre/Brookfield)
+      Statutory/flow
+        Sequence: Duty → Breach (s 48) → Causation (s 51)
+        Overlays: Pt XI (mental harm) • Pt VBA caps
+  ```
+
 tripwires:
-- Conflating pure economic with consequential loss
-- Ignoring Pt VBA thresholds/caps
-- Treating salient features as elements
-- Overlooking psychiatric-harm coherence limits
-- Assuming relational loss is recoverable
-- Treating trespass as ownership protection
+  - Conflating pure economic with consequential loss.
+  - Ignoring Pt VBA thresholds or caps.
+  - Treating salient features as elements.
+  - Overlooking psychiatric-harm coherence limits.
+  - Treating trespass as ownership protection.
+
 anchors:
   cases:
-  - Rogers v Whitaker (1992) 175 CLR 479, 490–493
-  - Chapman v Hearse (1961) 106 CLR 112
-  - Entick v Carrington (1765) 19 St Tr 1029
-  - Overseas Tankship (UK) Ltd v Morts Dock & Engineering Co Ltd (Wagon Mound No 1)
-    [1961] AC 388 (PC) — persuasive remoteness nuance
+    - name: Rogers v Whitaker
+      citation: (1992) 175 CLR 479
+      court: High Court of Australia
+      pinpoints:
+        - 490
+        - 493
+
+    - name: Perre v Apand Pty Ltd
+      citation: "[1999] HCA 36; (1999) 198 CLR 180"
+      court: High Court of Australia
+      pinpoints:
+        - "[118]"
+        - "[122]"
+
+    - name: Brookfield Multiplex Ltd v Owners Corporation Strata Plan 61288
+      citation: (2014) 254 CLR 185
+      court: High Court of Australia
+      pinpoints:
+        - "[66]"
+        - "[69]"
+
+    - name: Plenty v Dillon
+      citation: (1991) 171 CLR 635
+      court: High Court of Australia
+      pinpoints:
+        - 639
+        - 640
+
+    - name: Caltex Refineries (Qld) Pty Ltd v Stavar
+      citation: "[2009] NSWCA 258"
+      court: New South Wales Court of Appeal
+      pinpoints:
+        - "[103]"
+
+    - name: Overseas Tankship (UK) Ltd v Morts Dock & Engineering Co Ltd (The Wagon Mound) (No 1)
+      citation: "[1961] AC 388 (PC)"
+      court: Privy Council
+      pinpoints:
+        - "426"
+
   statutes:
-  - Wrongs Act 1958 (Vic) s 48
-  - Wrongs Act 1958 (Vic) s 26
-  - Wrongs Act 1958 (Vic) s 51
-  notes: []
+    - name: Wrongs Act 1958 (Vic)
+      provisions:
+        - s 26
+        - s 48
+        - s 51(1)(b)
+        - s 51(4)
+        - s 74
+        - Pt XI
+        - Pt VBA
+      notes: >-
+        Mix includes at least two High Court authorities and a single UK/PC authority (used with nuance); all anchors connect to the back section.
+
 reading_level: Plain English (JD)
+
 tags:
-- MLS_H1
+  - MLS_H1
+
 keywords:
-- torts
-- victoria
-- duty
-- breach
-- causation
-- damages
+  - torts
+  - victoria
+  - duty
+  - breach
+  - causation
+  - damages
