--- a/jd/cards_yaml/0003-breach-what-is-the-shirt-calculus.yml
+++ b/jd/cards_yaml/0003-breach-what-is-the-shirt-calculus.yml
@@ -1,121 +1,153 @@
-front: How do you apply the Shirt calculus to determine breach in negligence?
-back: 'Issue.
+front: "How do you apply the Shirt calculus to determine breach in negligence?"
+back: |
+  Issue — Identify when a defendant falls below the reasonable-response standard under Wrongs Act 1958 (Vic) s 48 once duty is already established.
 
-  Identify when a defendant falls below the reasonable-response standard under Wrongs
-  Act 1958 (Vic) s 48 once duty is already established.
+  Rule —
+  - The Shirt calculus asks whether a reasonable person would have taken precautions by weighing: 
+    (1) foreseeability (not far‑fetched or fanciful) (Chapman v Hearse (1961) 106 CLR 112, 121, s 48(1)(a));
+    (2) not insignificant risk (s 48(1)(b));
+    (3) probability and seriousness of harm;
+    (4) burden of precautions; and
+    (5) social utility of the activity.
+  - Risk must be characterised ex ante without hindsight: Wrongs Act 1958 (Vic) s 49.
+  - Careful risk definition is essential: Roads and Traffic Authority of NSW v Dederer (2007) 234 CLR 330, 345–46 [44].
 
-  Rule.
+  Application scaffold —
+  (1) Frame the specific risk without hindsight (s 49).
+  (2) Establish foreseeability and "not insignificant" risk (s 48(1)(a)-(b)).
+  (3) Evaluate s 48(2)(a)-(d): probability, seriousness, burden, social utility.
+  (4) Cite fact anchors (public authority, recreation, vulnerable plaintiff).
+  (5) Keep causation and contributory negligence separate (s 51).
 
-  The Shirt calculus asks whether a reasonable person would have taken precautions
-  by weighing: (1) foreseeability (not far‑fetched or fanciful) (Chapman v Hearse
-  (1961) 106 Commonwealth Law Reports (Commonwealth Law Reports (CLR)) 112.
+  Authorities map —
+  - Wyong v Shirt (1980) 146 CLR 40, 47-48 — Threshold and balancing.
+  - Chapman v Hearse (1961) 106 CLR 112, 121 — Foreseeability standard.
+  - Vairy v Wyong Shire Council [2005] HCA 62; (2005) 223 CLR 422 — Anti-hindsight.
+  - Brodie v Singleton Shire Council (2001) 206 CLR 512 — Public authorities.
+  - Strong v Woolworths Ltd [2012] HCA 5; (2012) 246 CLR 182 — Modern application.
 
-  121.
+  Statutory hook —
+  - Wrongs Act 1958 (Vic) ss 48-49, 51 — Breach and causation framework.
+  - Consider Pt IVAA for proportionate liability where applicable.
 
-  s 48(1)(a)).
+  Tripwires —
+  - Treating foreseeability alone as breach without proving "not insignificant" (s 48(1)).
+  - Framing the risk with hindsight rather than ex ante (s 49 guardrail).
+  - Reducing s 48(2) to a checklist instead of a balancing exercise.
+  - Over‑relying on "obvious risk" where D's operations created the hazard.
+  - Collapsing breach with causation instead of applying s 51 separately.
 
-  (2) not insignificant risk (s 48(1)(b)).
+  Conclusion — Breach is established only if the s 48 balance shows a reasonable person would have taken additional precautions. Keep causation and contributory negligence in their own steps.
 
-  (3) probability and seriousness of harm.
+why_it_matters: |
+  This is the core Victorian breach scaffold. Starting at s 48(1) forces precise risk identification and a "not insignificant" screen; s 48(2) then structures a proportional response to probability, seriousness, burden, and social utility, with s 49’s anti-hindsight guardrail and s 51 separating causation.
 
-  (4) burden of precautions.
-
-  and (5) Application scaffold.
-
-  1) Frame the specific risk without hindsight (s 49).
-
-  2) Establish foreseeability and “not insignificant” risk (s 48(1)(a)-(b)).
-
-  3) Evaluate s 48(2)(a)-(d): probability, seriousness, burden, social utility .
-
-  cite fact anchors (public authority, recreation, vulnerable plaintiff).
-
-  Authorities map.
-
-  Threshold and balancing: Wyong v Shirt 146 CLR 40, 47-48.
-
-  Wrongs Act s 48(1)-(2).
-
-  Foreseeability: Chapman 106 CLR 112, 121.
-
-  Vairy 223 CLR 422.
-
-  Statutory hook.
-
-  Wrongs Act 1958 (Vic) ss 48-49, 51.
-
-  Tripwires.
-
-  Conclusion.
-
-  Breach is established only if the s 48 balance shows a reasonable person would have
-  taken additional precautions.
-
-  keep causation and contributory negligence (CN) in their own steps.
-
-  __HD__0__
-
-  State the governing test and any operative statutory provisions.
-
-  __HD__1__
-
-  Apply issues -> rules -> apply to facts -> conclude.
-
-  __HD__2__
-
-  Lead: Wyong Shire Council v Shirt (1980) 146 CLR 40, 47–48 (Mason J).
-
-  __HD__3__
-
-  Primary: Wrongs Act 1958 (Vic) s 48.
-
-  __HD__4__
-
-  - Don’t exceed statutory thresholds/caps
-
-  - Don’t conflate consequential with pure economic loss
-
-  - Apply coherence checks before extending duties.
-
-  __HD__5__
-
-  Tie the analysis back to the pleadings and the available remedies/defences.
-
-  '
-why_it_matters: "This is the core exam scaffold for breach. Starting at s 48(1) forces\n\
-  \  precise risk identification and the “not insignificant” screen; s 48(2) then\
-  \ structures\n  a proportional response to probability, seriousness, burden, and\
-  \ social utility,\n  with s 49–56 guardrails. Separating breach from causation (s\
-  \ 51) and CN earns method\n  marks.\n\n  \n"
 mnemonic: F.P.B.S. – Foreseeability, Probability, Burden, Social utility
-diagram: "```mermaid\nmindmap\n  root((Card overview))\n    Issue\n    Rule\n    Application\n\
-  \    Conclusion\n  - Issue\n  - Rule\n  - Application\n  - Conclusion\n```\n"
+
+diagram: |-
+  ```mermaid
+  mindmap
+    root((Breach: Shirt calculus (Vic)))
+      Issue
+        Specific risk framed ex ante
+      Rule
+        s 48(1): foreseeable & not-insignificant
+        Balance (a)–(d) — Shirt
+        No hindsight (s 49)
+      Application
+        Weigh probability • seriousness • burden/cost • social utility
+        Specify reasonable precautions
+        Keep causation separate (s 51)
+      Authorities
+        Wyong v Shirt
+        Dederer / Vairy
+      Statute
+        Wrongs Act ss 48–49
+        s 51 (separate step)
+  ```
+
 tripwires:
-- Treating foreseeability alone as breach without proving “not insignificant” (s 48(1)).
-- Framing the risk with hindsight rather than ex ante (s 49 guardrail).
-- Reducing s 48(2) to a checklist instead of a balancing exercise.
-- Over‑relying on “obvious risk” where D’s operations created the hazard.
-- Collapsing breach with causation instead of applying s 51 separately.
+  - "Treating foreseeability alone as breach without proving 'not insignificant' (s 48(1))."
+  - "Framing the risk with hindsight rather than ex ante (s 49 guardrail)."
+  - "Reducing s 48(2) to a checklist instead of a balancing exercise."
+  - "Over-relying on 'obvious risk' where D's operations created the hazard."
+  - "Collapsing breach with causation instead of applying s 51 separately."
+
 anchors:
   cases:
-  - Wyong Shire Council v Shirt (1980) 146 CLR 40, 47–48 (Mason J)
-  - Chapman v Hearse (1961) 106 CLR 112, 121 (Windeyer J)
-  - Vairy v Wyong Shire Council [2005] HCA 62; (2005) 223 CLR 422
-  - Brodie v Singleton Shire Council (2001) 206 CLR 512
-  - Strong v Woolworths Ltd [2012] HCA 5; (2012) 246 CLR 182, 189 [23]
-  - Podrebersek v Australian Iron & Steel Pty Ltd (1985) 59 ALJR 492, 494
-  - 'Bolton v Stone [1951] AC 850, 860 (HL) — UK nuance: illustrates acceptable residual
-    risk'
+    - name: Wyong Shire Council v Shirt
+      citation: (1980) 146 CLR 40
+      court: HCA
+      pinpoints:
+        - "47-48"
+      notes: Established the balancing test for breach.
+
+    - name: Chapman v Hearse
+      citation: (1961) 106 CLR 112
+      court: HCA
+      pinpoints:
+        - 121
+      notes: Foreseeability standard (not far-fetched or fanciful).
+
+    - name: Vairy v Wyong Shire Council
+      citation: "[2005] HCA 62; (2005) 223 CLR 422"
+      court: HCA
+      pinpoints:
+        - "[51]"
+      notes: Anti-hindsight principle and risk framing.
+
+    - name: Brodie v Singleton Shire Council
+      citation: (2001) 206 CLR 512
+      court: HCA
+      pinpoints: []
+      notes: Public authority standard of care.
+
+    - name: Strong v Woolworths Ltd
+      citation: "[2012] HCA 5; (2012) 246 CLR 182"
+      court: HCA
+      pinpoints:
+        - 189
+        - "[23]"
+      notes: Modern application of breach principles.
+
+    - name: Roads and Traffic Authority of NSW v Dederer
+      citation: (2007) 234 CLR 330
+      court: HCA
+      pinpoints:
+        - "345-346"
+        - "[44]"
+      notes: Importance of careful risk characterisation.
+
+    - name: Podrebersek v Australian Iron & Steel Pty Ltd
+      citation: (1985) 59 ALJR 492
+      court: HCA
+      pinpoints:
+        - 494
+      notes: Contributory negligence principles.
+
+    - name: Bolton v Stone
+      citation: "[1951] AC 850"
+      court: HL
+      pinpoints:
+        - 860
+      notes: Illustrates acceptable residual risk.
+
   statutes:
-  - Wrongs Act 1958 (Vic) s 48
-  notes: []
+    - name: Wrongs Act 1958 (Vic)
+      provisions:
+        - s 48
+        - s 49
+        - s 51
+      notes: Provides the statutory breach, hindsight exclusion, and causation framework.
+
 reading_level: Plain English (JD)
+
 tags:
-- MLS_H1
+  - MLS_H1
 keywords:
-- torts
-- victoria
-- duty
-- breach
-- causation
-- damages
+  - torts
+  - victoria
+  - breach
+  - Shirt calculus
+  - Wrongs Act
+  - causation
