--- a/jd/cards_yaml/0006-private-nuisance-unreasonableness-factors.yml
+++ b/jd/cards_yaml/0006-private-nuisance-unreasonableness-factors.yml
@@ -1,128 +1,135 @@
-front: What factors determine whether interference is unreasonable in private nuisance?
-back: 'Issue.
+front: "What factors determine whether interference is unreasonable in private nuisance?"
+back: |
+  Issue — Which factors determine unreasonable interference in private nuisance, and how do Victorian statutes affect the balance?
 
-  Which factors decide if interference with land use is unreasonable in private nuisance,
-  and how do Victorian statutory overlays inform that balance?
+  Rule —
+  - Unreasonableness is assessed by: ordinary sensitivity (not the unusually delicate), locality, duration/frequency, gravity/type of harm, malice, and the utility of the conduct; physical damage strongly weighs against the defendant.
+  - The test is objective and contextual.
 
-  __HD__0__
+  Application scaffold —
+  (1) Confirm proprietary standing and the interference (noise/odour/vibration/damage).
+  (2) Work factor-by-factor (sensitivity, locality, duration/frequency, gravity, utility, malice) with evidence.
+  (3) Consider statutory authority/defences and select remedy (damages v calibrated injunction).
 
-  Unreasonableness is multi-factorial: sensitivity (only ordinary users protected:
-  Robinson v Kilvert (1889) 41 Ch D 88, 96 (CA)).
+  Authorities map —
+  - Hargrave v Goldman (HCA) — Links reasonableness to responsibility for hazards.
+  - Burnie Port Authority v General Jones (HCA) — Integrates abnormal danger/utility into a reasonableness frame.
+  - Munro v Southern Dairies (VSC) — Shows persistence/duration tipping liability.
+  - Sturges v Bridgman (UK CA) — Anchors locality.
+  - ACQ Pty Ltd v Cook (QCA) — Illustrates planning context in the balance.
 
-  locality (character of neighbourhood: Sturges v Bridgman (1879) 11 Ch D 852, 865
-  (CA), planning permits relevant).
+  Statutory hook —
+  - Environment Protection Act 2017 (Vic) s 25 (general environmental duty).
+  - Planning and Environment Act 1987 (Vic) permits as context.
+  - Supreme Court Act 1986 (Vic) injunction power.
+  - Compliance informs reasonableness but is not a defence without express authority.
 
-  duration/frequency (persistent interference more actionable: Munro v Southern Dairies
-  [1955] Victorian Law Reports (Victorian Law Reports (VLR)) 332, 336) Application
-  scaffold.
+  Tripwires —
+  - Conflating private nuisance with trespass (direct interference).
+  - Assuming public utility is a defence.
+  - Treating extraordinary sensitivity as actionable.
+  - Treating permit/licence compliance as complete defence.
+  - Seeking blanket injunctions without proportional tailoring.
 
-  1) Identify occupier status and interference (noise, odour, physical damage).
+  Conclusion — Weigh the factors, account for any statutory authorisation, and tailor the remedy to proportionality and locality.
 
-  2) Apply the factors: sensitivity, locality, duration/frequency, utility, malice,
-  type of harm.
+why_it_matters: |
+    Articulating the multi-factor balance, tied to EP Act duties, planning context and calibrated remedies, is decisive on MLS nuisance fact patterns; anchoring with Hargrave, Burnie, Munro and a limited UK reference shows doctrinal control.
 
-  cite Hargrave/Fennell/Pullen for Australian context.
+mnemonic: "SLURDMT: Sensitivity → Locality → Utility → Remedies → Duration → Malice → Type"
 
-  3) Examine statutory authority or planning approvals (Wrongs Act 1958 (Vic) pt XII
-  ss 83-85.
+diagram: |
+  ```mermaid
+  mindmap
+    root((Private nuisance unreasonableness))
+      Issue
+        Factors & statutory context
+      Rule
+        Locality
+        Duration / frequency
+        Gravity / type of harm
+      Application
+        Confirm standing & interference
+        Factor-by-factor balance
+        Statutory authority & calibrated remedy
+      Authorities
+        Hargrave v Goldman
+        Burnie Port Authority
+      Statute
+        Environment Protection Act 2017 s 25
+        Planning and Environment Act 1987
+  ```
 
-  Environment Protection Authority (EPA) licences).
-
-  __HD__1__
-
-  Core factors: Robinson v Kilvert 41 Ch D 88, 96.
-
-  Sturges v Bridgman 11 Ch D 852, 865.
-
-  Munro [1955] VLR 332, 336.
-
-  Bamford v Turnley 122 English Reports (ER) 25, 32-33.
-
-  Hollywood Silver Fox Farm Statutory hook.
-
-  Wrongs Act 1958 (Vic) pt XII ss 83-85.
-
-  Supreme Court Act 1986 (Vic) s 38.
-
-  Environment Protection Act 2017 (Vic) pt 5.3.
-
-  Charter of Human Rights and Responsibilities Act 2006 Tripwires.
-
-  Conflating nuisance with trespass.
-
-  Assuming public benefit excuses nuisance.
-
-  Treating exceptional sensitivity as actionable.
-
-  Ignoring statutory authority or planning approvals.
-
-  Ordering blanket injunctions without Shelfer proportionality.
-
-  __HD__2__
-
-  Argue unreasonableness by weighing the factors, then integrate statutory authorisations
-  and tailored remedies.
-
-  ensure Australian apex authority anchors your analysis.
-
-  __HD__0__
-
-  State the governing test and any operative statutory provisions.
-
-  __HD__1__
-
-  Apply issues -> rules -> apply to facts -> conclude.
-
-  __HD__2__
-
-  Lead: Robinson v Kilvert (1889) 41 Ch D 88, 96 (CA).
-
-  '
-why_it_matters: Private nuisance fact patterns hinge on articulating the multi-factor
-  balance and remedies. Bringing in Hargrave, Fennell, Pullen plus Wrongs Act pt XII,
-  EPA overlays, and Shelfer reasoning shows MLS examiners you can integrate doctrine,
-  statute and policy.
-mnemonic: 'SLURDMT: Sensitivity → Locality → Utility → Remedies → Duration → Malice
-  → Type'
-diagram: "```mermaid\nmindmap\n  root((Card overview))\n    Issue\n    Rule\n    Application\n\
-  \    Conclusion\n  - Issue\n  - Rule\n  - Application\n  - Conclusion\n```\n"
 tripwires:
-- Conflating private nuisance with trespass (direct interference).
-- Assuming public benefit excuses nuisance.
-- Treating extraordinary sensitivity as actionable.
-- Ignoring Wrongs Act pt XII statutory authority or planning approvals.
+  - "Conflating private nuisance with trespass (direct interference)."
+  - "Assuming public utility is a defence."
+  - "Treating extraordinary sensitivity as actionable."
+  - "Treating permit/licence compliance as complete defence."
+  - "Seeking blanket injunctions without proportional tailoring."
+
 anchors:
   cases:
-  - Robinson v Kilvert (1889) 41 Ch D 88, 96 (CA)
-  - Sturges v Bridgman (1879) 11 Ch D 852, 865 (CA)
-  - Munro v Southern Dairies Ltd [1955] VLR 332, 336 (VSC)
-  - Bamford v Turnley (1862) 122 ER 25, 32–33
-  - Hollywood Silver Fox Farm Ltd v Emmett [1936] 2 KB 468, 476 (CA)
-  - Sedleigh-Denfield v O'Callaghan [1940] AC 880, 903 (HL)
-  - Bone v Seale [1975] 1 WLR 797, 804 (CA)
-  - Hargrave v Goldman (1963) 110 CLR 40, 66–67
-  statutes: []
-  notes: []
-keywords:
-- private-nuisance
-- unreasonableness-factors
-- locality
-- sensitivity
-- duration-frequency
-- utility-vs-harm
-- malice
-- statutory-authority
-- nuisance-remedies
-- environmental-overlays
-reading_level: Plain English (JD)
+    - name: Hargrave v Goldman
+      citation: (1963) 110 CLR 40
+      court: HCA
+      pinpoints:
+        - "66–67"
+      notes: Links reasonableness to responsibility for hazards.
+
+    - name: Burnie Port Authority v General Jones
+      citation: (1994) 179 CLR 520
+      court: HCA
+      pinpoints: []
+      notes: Integrates abnormal danger and utility into reasonableness.
+
+    - name: Munro v Southern Dairies Ltd
+      citation: "[1955] VLR 332"
+      court: VSC
+      pinpoints:
+        - 336
+      notes: Shows persistence/duration tipping liability.
+
+    - name: Sturges v Bridgman
+      citation: (1879) 11 Ch D 852
+      court: UK CA
+      pinpoints:
+        - 865
+      notes: Anchors locality; UK persuasive only.
+
+    - name: ACQ Pty Ltd v Cook
+      citation: "[2009] QCA"
+      court: QCA
+      pinpoints: []
+      notes: Illustrates planning context in balancing.
+
+  statutes:
+    - name: Environment Protection Act 2017 (Vic)
+      provisions:
+        - s 25
+
+    - name: Planning and Environment Act 1987 (Vic)
+      provisions: []
+
+    - name: Supreme Court Act 1986 (Vic)
+      provisions: []
+
+reading_level: "Plain English (JD)"
+
 tags:
-- LAWS50025 - Torts
-- Nuisance
-- Exam_Fundamentals
-- MLS_H1
-_lint_notes:
-- issue_contextualised
-- diagram_conceptual_branches
-- statutory_hook_listed
-- anchors_normalised
-- keywords_trimmed_<=10
+  - LAWS50025
+  - Torts
+  - Nuisance
+  - Exam_Fundamentals
+  - MLS_H1
+
+keywords:
+  - private-nuisance
+  - unreasonableness-factors
+  - locality
+  - sensitivity
+  - duration-frequency
+  - utility-vs-harm
+  - malice
+  - statutory-authority
+  - nuisance-remedies
+  - planning-permits
