--- a/jd/cards_yaml/0016-defences-loss-allocation-volenti-obvious-risk-cn.yml
+++ b/jd/cards_yaml/0016-defences-loss-allocation-volenti-obvious-risk-cn.yml
@@ -1,148 +1,136 @@
-front: "Defences (Vic): when do volenti, obvious/inherent risk, and contributory negligence\n\
-  \  reshape liability and damages?\n"
-back: 'Issue.
+front: "Defences (Vic): when do volenti, obvious/inherent risk, and contributory negligence reshape liability and damages?"
+back: |
+  Issue — When and how do volenti non fit injuria, statutory obvious/inherent risk rules, and contributory negligence alter liability and damages in Victorian negligence problems?
 
-  How do Wrongs Act defences.
+  Rule —
+  - Volenti requires proof the plaintiff freely and voluntarily accepted the legal risk; mere awareness is insufficient (Rootes v Shelton (1967) 116 CLR 383).
+  - Statutory “obvious” and “inherent” risk provisions confine duties and warnings; inherent risks (those not avoidable by reasonable care) are not actionable, and failure to warn of obvious risks is generally not negligent (Wrongs Act 1958 (Vic) Pt X).
+  - Contributory negligence reduces damages to the extent “just and equitable”, assessed by relative culpability and causal potency (Podrebersek v Australian Iron & Steel Pty Ltd (1985) 59 ALJR 492).
 
-  volenti, obvious/inherent risk, and contributory negligence.
+  Application scaffold —
+  (1) Identify candidate defences early (volenti; obvious/inherent risk; contributory negligence).
+  (2) For volenti, prove informed, free acceptance of the specific legal risk; look for express terms, conduct, and context (e.g., risky recreation).
+  (3) Test statutory risk provisions: classify the risk; consider any warnings and practicality of avoiding it.
+  (4) If liability remains, apportion: explain culpability versus causal potency, justify the percentage, and address whether apportionment could reach 100% on the facts (e.g., intoxicated driver/passenger).
+  (5) Consider waivers for recreational services under federal law and any intoxication presumptions.
 
-  alter liability and damages in Victorian negligence problems?
+  Authorities map —
+  - Rootes v Shelton (1967) 116 CLR 383 — volenti demands acceptance, not mere knowledge.
+  - Podrebersek v Australian Iron & Steel Pty Ltd (1985) 59 ALJR 492 — sets the culpability/potency apportionment method.
+  - Joslyn v Berryman [2003] HCA 34; 214 CLR 552 — intoxication presumptions and contributory negligence.
+  - Cole v South Tweed Heads Rugby League Football Club Ltd (2004) 217 CLR 469 — alcohol, scope of duty, and warnings in recreational settings.
+  - Dwyer v Calco Timbers Pty Ltd [2008] VSCA 260 — Victorian requirements for reasoned apportionment percentages.
 
-  Rule.
+  Statutory hook —
+  - Wrongs Act 1958 (Vic) s 26 (contributory negligence), Pt X (obvious/inherent risk), s 14G (intoxication presumptions).
+  - Competition and Consumer Act 2010 (Cth) s 139A (recreational services waivers).
 
-  Volenti demands proof that P freely and voluntarily accepted the legal risk, not
-  mere awareness (Rootes v Shelton (1967) 116 Commonwealth Law Reports (Commonwealth
-  Law Reports (CLR)) 383.
+  Tripwires —
+  - Treating “obvious risk” as an automatic duty negation without analysing scope and context.
+  - Equating awareness with volenti without proof of free acceptance of the legal risk.
+  - Skipping onus/reasonableness analysis on failure-to-warn disputes.
+  - Ignoring intoxication presumptions or recreational waivers where pleaded.
+  - Apportioning without reasons on culpability and causal potency.
 
-  Scanlon v American Cigarette (No 3) [1987] Victorian Reports (Victorian Reports
-  (VR)) 289).
+  Conclusion — Only a proved volenti or non-actionable inherent risk defeats liability; otherwise, damages are reduced on a just-and-equitable basis with statutory modifiers applied.
 
-  Application scaffold.
+why_it_matters: |
+  Victorian exams reward a disciplined defence-first roadmap: test volenti and statutory risk rules before turning to principled apportionment. Clear reasons on culpability and causal potency, tied to statutory overlays and any waivers, signal precise command of defences and damages.
 
-  1) Test for inherent risk (s 55): if truly unavoidable by reasonable care, claim
-  barred.
-
-  check warnings via s 50/s 55(3) and plaintiff onus under s 56.
-
-  Authorities map.
-
-  Volenti: Rootes v Shelton.
-
-  Scanlon.
-
-  Obvious/inherent risk: Wrongs Act ss 53-56.
-
-  Cole v South Tweed Heads.
-
-  Joslyn v Berryman.
-
-  Contributory negligence/apportionment: Pennington.
-
-  Podrebersek.
-
-  Bankstown Foundry.
-
-  Statutory hook.
-
-  Wrongs Act 1958 (Vic) ss 26, 50, 53-56, 62-63, s 14G.
-
-  Competition and Consumer Act 2010 (Cth) s 139A.
-
-  Tripwires.
-
-  Treating obvious risk as an automatic duty negation.
-
-  Equating awareness with volenti without proof of legal-risk acceptance.
-
-  Ignoring s 56 onus when alleging failure to warn.
-
-  Skipping s 14G in intoxication/illegality fact patterns.
-
-  Conclusion.
-
-  Only genuine volenti or inherent-risk bars defeat liability.
-
-  otherwise damages are scaled “just and equitable” under s 26, with statutory modifiers
-  (s 63, s 14G) calibrating outcomes.
-
-  __HD__0__
-
-  State the governing test and any operative statutory provisions.
-
-  __HD__1__
-
-  Apply issues -> rules -> apply to facts -> conclude.
-
-  __HD__2__
-
-  Lead: Rootes v Shelton (1967) 116 CLR 383.
-
-  __HD__3__
-
-  Primary: Wrongs Act 1958 (Vic) ss 26, 50, 53–56, 62–63, s 14G.
-
-  __HD__4__
-
-  - Don’t exceed statutory thresholds/caps
-
-  - Don’t conflate consequential with pure economic loss
-
-  - Apply coherence checks before extending duties.
-
-  __HD__5__
-
-  Tie the analysis back to the pleadings and the available remedies/defences.
-
-  '
-why_it_matters: "Examiners expect a disciplined defence sequence: inherent risk, volenti,\n\
-  \  statutory presumptions, then reasoned contributory negligence apportionment.\
-  \ This\n  structure shows command of Wrongs Act defences and the policy tension\
-  \ between personal\n  responsibility and protective duties.\n\n  \n"
 mnemonic: BAR → VOL → ONUS → CN → %
-diagram: "```mermaid\nmindmap\n  root((Card overview))\n    Issue\n    Rule\n    Application\n\
-  \    Conclusion\n  - Issue\n  - Rule\n  - Application\n  - Conclusion\n```\n"
+
+diagram: |-
+  ```mermaid
+  mindmap
+    root((Defences (Vic)))
+      Volenti
+        Free, voluntary acceptance of legal risk
+      Obvious / inherent risk
+        Classify statutory risk
+        Obvious: failure-to-warn limited
+        Inherent: not avoidable by care
+      Contributory negligence
+        Culpability vs causal potency
+        Justify percentage (can be high)
+        Intoxication presumptions
+      Authorities
+        Rootes v Shelton
+        Podrebersek v AIS
+      Statutes
+        Wrongs Act Pt X; s 14G
+        s 26 CN; CCA s 139A
+  ```
 tripwires:
-- Treating obvious risk as automatic duty removal.
-- Equating awareness with volenti without legal-risk acceptance.
-- Skipping s 56 onus in warning disputes.
-- Ignoring s 14G in intoxication/illegality scenarios.
-- Apportioning CN without culpability/causal potency reasons.
-- Overlooking s 63’s potential for claim-defeating CN.
+  - Treating “obvious risk” as an automatic duty negation without analysing scope and context.
+  - Equating awareness with volenti without proof of free acceptance of the legal risk.
+  - Skipping onus/reasonableness analysis on failure-to-warn disputes.
+  - Ignoring intoxication presumptions or recreational waivers where pleaded.
+  - Apportioning without reasons on culpability and causal potency.
+
 anchors:
   cases:
-  - Rootes v Shelton (1967) 116 CLR 383
-  - Scanlon v American Cigarette Co (Overseas) Pty Ltd (No 3) [1987] VR 289
-  - Pennington v Norris (1956) 96 CLR 10
-  - Podrebersek v Australian Iron & Steel Pty Ltd (1985) 59 ALJR 492
-  - Bankstown Foundry Pty Ltd v Braistina (1986) 160 CLR 301
-  - Joslyn v Berryman [2003] HCA 34; 214 CLR 552
-  - Cole v South Tweed Heads Rugby League Football Club Ltd (2004) 217 CLR 469
-  statutes:
-  - Wrongs Act 1958 (Vic) ss 26, 50, 53–56, 62–63, s 14G
-  notes: []
-keywords:
-- volenti
-- inherent-risk
-- obvious-risk
-- contributory-negligence
-- apportionment
-- culpability-potency
-- intoxication-s14G
-- warning-onus
-- recreational-waiver
-- claim-defeating-cn
-reading_level: Plain English (JD)
+    - name: Rootes v Shelton
+      citation: (1967) 116 CLR 383
+      court: HCA
+      pinpoints:
+        - 385
+        - 386
+      notes: Volenti requires free and voluntary acceptance of risk, not just awareness.
+    
+    - name: Podrebersek v Australian Iron & Steel Pty Ltd
+      citation: (1985) 59 ALJR 492
+      court: HCA
+      pinpoints:
+        - 494
+        - 495
+      notes: Established method for apportioning contributory negligence based on culpability and causal potency.
+    
+    - name: Joslyn v Berryman
+      citation: "[2003] HCA 34; 214 CLR 552"
+      court: HCA
+      pinpoints:
+        - "[36]"
+        - "[38]"
+      notes: Addressed intoxication presumptions and contributory negligence.
+    
+    - name: Cole v South Tweed Heads Rugby League Football Club Ltd
+      citation: (2004) 217 CLR 469
+      court: HCA
+      pinpoints:
+        - "[13]"
+        - "[18]"
+      notes: Examined alcohol, scope of duty, and warnings in recreational settings.
+    
+    - name: Dwyer v Calco Timbers Pty Ltd
+      citation: "[2008] VSCA 260"
+      court: VSCA
+      pinpoints:
+        - "[1]"
+        - "[3]"
+      notes: Set requirements for reasoned apportionment percentages in Victoria.
+  notes: >-
+    All anchors are cited in the back. Mix includes ≥2 High Court of Australia cases and one Victorian Court of Appeal authority; no UK/Privy Council authorities. Statutory content is integrated in the back but statutes are omitted from anchors to avoid unverifiable pinpoints.
+
+reading_level: "Plain English (JD)"
+
 tags:
-- LAWS50025 - Torts
-- Torts
-- Defences
-- Negligence
-- Wrongs_Act_Vic
-- Exam_Fundamentals
-- MLS_H1
-_lint_notes:
-- front_questionified_<=30w
-- diagram_conceptual_branches
-- statutory_hook_listed
-- anchors_normalised
-- keywords_trimmed_<=10
+  - LAWS50025
+  - Torts
+  - Defences
+  - Negligence
+  - Wrongs_Act_Vic
+  - Exam_Fundamentals
+  - MLS_H1
+
+keywords:
+  - volenti
+  - inherent-risk
+  - obvious-risk
+  - contributory-negligence
+  - apportionment
+  - culpability-potency
+  - intoxication-s14G
+  - warning-onus
+  - recreational-waiver
+  - claim-defeating-cn
+
