--- a/jd/cards_yaml/0021-trespass-goods-conversion-detinue.yml
+++ b/jd/cards_yaml/0021-trespass-goods-conversion-detinue.yml
@@ -1,121 +1,99 @@
-front: "Interference with goods: classify trespass, conversion, detinue, and state\n\
-  \  the remedy?\n"
-back: 'Issue.
-
+front: "Interference with goods: classify trespass, conversion, detinue, and state\n the\
+  \ remedy?"
+back: |
+  Issue.
   Which interference-with-goods tort applies and what remedy follows?
-
   Note: Overflow from front .
-
   “valuation dates, return orders, detention damages”.
-
   Rule.
-
-  Trespass to goods protects possession against direct interference and is actionable
-  per se (Hutchins v Maughan [1947] Victorian Law Reports (Victorian Law Reports (VLR))
-  131, 132-133), so nominal damages are available.
-
+  Trespass to goods protects possession against direct interference and is actionable per se (Hutchins v Maughan [1947] Victorian Law Reports (Victorian Law Reports (VLR)) 131, 132-133), so nominal damages are available.
   even without proof of loss.
-
   Application scaffold.
-
   1) Title to sue: establish actual possession or an immediate right (consider bailors/bailees.
-
   jus tertii rarely assists defendants).
-
-  2) Characterise the interference: direct trespass (actionable per se), dominion
-  supporting conversion, or demand‑refusal activating detinue.
-
+  2) Characterise the interference: direct trespass (actionable per se), dominion supporting conversion, or demand‑refusal activating detinue.
   Authorities map.
-
-  Trespass actionable per se and nominal damages: Hutchins v Maughan [1947] VLR 131,
-  132-133.
-
+  Trespass actionable per se and nominal damages: Hutchins v Maughan [1947] VLR 131, 132-133.
   Conversion .
-
-  inconsistent dominion/refusal: Penfolds 74 Commonwealth Law Reports (Commonwealth
-  Law Reports (CLR)) 204, 228-230.
-
+  inconsistent dominion/refusal: Penfolds 74 Commonwealth Law Reports (Commonwealth Law Reports (CLR)) 204, 228-230.
   Bunnings [2011] New South Wales Court of Appeal (NSWCA) 342, [124].
-
   Statutory hook.
-
   Tripwires.
-
   Conclusion.
-
   Correct classification governs remedy: trespass protects possession per se.
-
   conversion substitutes value at conversion.
-
-  detinue delivers return or judgment-value with detention damages because the wrong
-  continues until compliance.
-
+  detinue delivers return or judgment-value with detention damages because the wrong continues until compliance.
   __HD__0__
-
   State the governing test and any operative statutory provisions.
-
   __HD__1__
-
   Apply issues -> rules -> apply to facts -> conclude.
-
   __HD__2__
-
   Lead: Penfolds Wines Pty Ltd v Elliott [1946] HCA 46; (1946) 74 CLR 204, 228–230.
-
   __HD__3__
-
   Primary: Wrongs Act 1958 (Vic) s 48.
-
   __HD__4__
-
+  
   - Don’t exceed statutory thresholds/caps
-
+  
   - Don’t conflate consequential with pure economic loss
-
+  
   - Apply coherence checks before extending duties.
-
   __HD__5__
-
   Tie the analysis back to the pleadings and the available remedies/defences.
 
-  '
-why_it_matters: "MLS exams reward precise sequencing: stand up your possessory title\n\
-  \  first, then choose between trespass (direct interference), conversion (dominion\n\
-  \  inconsistent with immediate right), and detinue (demand/refusal). Each tort drives\n\
-  \  a different remedy—especially the valuation dates and detention damages. Mislabel\n\
-  \  the tort and you misstate the relief, losing marks. Bunnings ensures you remember\n\
-  \  demand/refusal can evidence conversion, while Heavener explains why detinue’s\
-  \ valuation\n  waits until judgment. Keep the jus tertii rule and bailment standing\
-  \ in view to\n  secure high-band answers.\n\n  \n"
+why_it_matters: |
+  MLS exams reward precise sequencing: stand up your possessory title
+   first, then choose between trespass (direct interference), conversion (dominion
+   inconsistent with immediate right), and detinue (demand/refusal). Each tort drives
+   a different remedy—especially the valuation dates and detention damages. Mislabel
+   the tort and you misstate the relief, losing marks. Bunnings ensures you remember
+   demand/refusal can evidence conversion, while Heavener explains why detinue’s valuation
+   waits until judgment. Keep the jus tertii rule and bailment standing in view to
+   secure high-band answers.
+
 mnemonic: TCD-J → Title → Characterise → Date (conversion vs judgment) → Jus tertii
-rarely helps defendants.: {}
-diagram: "```mermaid\nmindmap\n  root((Card overview))\n    Issue\n    Rule\n    Application\n\
-  \    Conclusion\n  - Issue\n  - Rule\n  - Application\n  - Conclusion\n```\n"
+
+diagram: |
+  ```mermaid
+  mindmap
+   root((Card overview))
+   Issue
+   Rule
+   Application
+   Conclusion
+   - Issue
+   - Rule
+   - Application
+   - Conclusion
+  ```
+
 tripwires:
-- Pleading conversion where the interference was merely negligent loss or misdelivery.
-- Omitting a clear demand/refusal before alleging detinue.
-- Using the wrong valuation date (detinue ≠ conversion).
-- Assuming legal ownership is required when possessory title suffices.
-- Arguing jus tertii to defeat a plaintiff with the better possessory right.
+  - "Pleading conversion where the interference was merely negligent loss or misdelivery."
+  - "Omitting a clear demand/refusal before alleging detinue."
+  - "Using the wrong valuation date (detinue ≠ conversion)."
+  - "Assuming legal ownership is required when possessory title suffices."
+  - "Arguing jus tertii to defeat a plaintiff with the better possessory right."
+
 anchors:
   cases:
-  - Penfolds Wines Pty Ltd v Elliott [1946] HCA 46; (1946) 74 CLR 204, 228–230
-  - Butler v Egg & Egg Pulp Marketing Board [1966] HCA 74; (1966) 114 CLR 185, 191–192
-  - Heavener v Loomes [1924] HCA 10; (1924) 34 CLR 306
-  - Bunnings Group Ltd v CHEP Australia Ltd [2011] NSWCA 342; (2011) 82 NSWLR 420,
-    [124]
+    - Penfolds Wines Pty Ltd v Elliott [1946] HCA 46; (1946) 74 CLR 204, 228–230
+    - Butler v Egg & Egg Pulp Marketing Board [1966] HCA 74; (1966) 114 CLR 185, 191–192
+    - Heavener v Loomes [1924] HCA 10; (1924) 34 CLR 306
+    - Bunnings Group Ltd v CHEP Australia Ltd [2011] NSWCA 342; (2011) 82 NSWLR 420, [124]
   statutes:
-  - Wrongs Act 1958 (Vic) s 48
-  - Wrongs Act 1958 (Vic) s 26
-  - Wrongs Act 1958 (Vic) s 51
-  notes: []
+    - Wrongs Act 1958 (Vic) s 48
+    - Wrongs Act 1958 (Vic) s 26
+    - Wrongs Act 1958 (Vic) s 51
+
 reading_level: Plain English (JD)
+
 tags:
-- MLS_H1
+  - MLS_H1
+
 keywords:
-- torts
-- victoria
-- duty
-- breach
-- causation
-- damages
+  - torts
+  - victoria
+  - duty
+  - breach
+  - causation
+  - damages
